@@ -1,5 +1,6 @@
 * Agents: Do not leave newly created or modified agent without an ECCP password.
-  The ECCP password is autogenerated if required.
+  The ECCP password is autogenerated if required. Also, assign an ECCP password
+  at install/update time.
 * ECCP Users: new module for administration of ECCP authorized users
 * Dialer (ECCP): fix requests for agents that are not assigned to any queue.
 * Dialer: fix bug in which a request for outgoing calls would repeatedly request
